# KATES

./: LICENSE  README.md  cli.py  fastq_fasta.py  pyproject.toml
app/: cli.py
app/commands/: __init__.py  estimate_command.py  metadata_command.py  preprocessing_command.py
app/models/: CNN.py
app/services/: __init__.py  hdbscan_service.py  metadata.service.py  metadata_service.py  parse.py  parser_service.py  preprocessing_service.py
